# wire-cell-toolkit

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.org  check_pdsp_sim_sp.jsonnet  configure  setup.sh  wscript
.beads/: issues.jsonl
apps/: CMakeLists.txt
aux/: CMakeLists.txt
cfg/: CMakeLists.txt  fileio.jsonnet  omni.jsonnet  omnimap.jsonnet  pgraph.jsonnet  wirecell.jsonnet  wrap.jsonnet
cfg/docs/: pgraph.org
cfg/docs/pgraph/: dotify.sh  drifter-fanpipe.jsonnet  drifter-fans.jsonnet  drifter-graph.jsonnet  drifter-intern.jsonnet  drifter-object.json  drifter-object.jsonnet  drifter-pipeline.jsonnet  drifter.jsonnet  pgraph-local.setup  pgraph.org  readtheorg-solarized-light.css
cfg/layers/: omnijob.jsonnet
cfg/layers/high/: main.jsonnet
cfg/layers/mids/pdsp/: api.jsonnet
cfg/layers/mids/pdsp/api/: nf.jsonnet  sigproc.jsonnet  sim.jsonnet  sp.jsonnet
cfg/layers/mids/pdsp/variants/: nominal.jsonnet
cfg/omni/: all.jsonnet  dune-params.jsonnet
cfg/omni/pdhd/: img.jsonnet  nodes.jsonnet  omni.jsonnet  params.jsonnet  sim.jsonnet  simparams.jsonnet  sp.jsonnet  spng-filters.jsonnet  spng.jsonnet
cfg/omni/pdsp/: nf.jsonnet  omni.jsonnet  sp.jsonnet
cfg/pgrapher/: README.org
cfg/pgrapher/common/: clus.jsonnet  funcs.jsonnet  tools.jsonnet
cfg/pgrapher/common/sim/: nodes.jsonnet
cfg/pgrapher/experiment/dune-vd/: clus.jsonnet  dnnroi.jsonnet  img.jsonnet  sim.jsonnet
cfg/pgrapher/experiment/icarus/: params.jsonnet  sim.jsonnet  sp.jsonnet  wcls-multitpc-sim-drift-simchannel-yzsim-shifted-refactored.jsonnet  wcls-multitpc-sim-drift-simchannel-yzsim.jsonnet  wcls-multitpc-sim-drift-simchannel.jsonnet  wcls-sim-drift-simchannel.jsonnet  yzmap_icarus.jsonnet
cfg/pgrapher/experiment/iceberg/: chndb-base.jsonnet  params.jsonnet  sp.jsonnet
cfg/pgrapher/experiment/pdhd/: chndb-base.jsonnet  clus.jsonnet  depo_npz_check.py  flash.jsonnet  img.jsonnet  nf.jsonnet  params.jsonnet  pdhd-noise-templates.json  pdhd-opch-map.json  pdhd-opdet-geom.json  pdhd-spe-templates-tuned.json  pdhd-spe-templates-v1.json  pdhd-spe-templates.json  qlmatching.jsonnet  sp-filters.jsonnet  sp.jsonnet  wcls-nf-dnnsp-img.jsonnet  wcls-nf-sp-img.jsonnet  wcls-rawdigit-dnnsp.jsonnet  wcls-rawdigit-sp.jsonnet  wcls-sim-drift-deposplat.jsonnet  wcls-sim-drift-simchannel-priorSCE.jsonnet  wcls-sp.jsonnet  wct-img-2-bee.py  wct-sim-check-depofill-test.jsonnet  wct-sim-check_img_debug.jsonnet  wct-sim-check_img_debug_sdepo.jsonnet  wct-sim-check_post_bdf.jsonnet
cfg/pgrapher/experiment/pdsp/: wct-sim-ideal-sn.jsonnet
cfg/pgrapher/experiment/protodunevd/: chndb-base.jsonnet  chndb-resp-bot.jsonnet  chndb-resp-top.jsonnet  clus.jsonnet  flash.jsonnet  img.jsonnet  magnify-sinks.jsonnet  nf.jsonnet  params.jsonnet  pdvd-opch-map.json  pdvd-opdet-geom.json  pdvd-spe-templates-v2.json  pdvd-spe-templates.json  qlmatching.jsonnet  sp-filters.jsonnet  sp.jsonnet
cfg/pgrapher/experiment/sbnd/: cathode_fiducial.jsonnet  chndb-base.jsonnet  chndb-perfect.jsonnet  clus.jsonnet  dead_regions.jsonnet  img.jsonnet  magnify-sinks.jsonnet  params.jsonnet  pmt_nonlinearity_params.jsonnet  qlmatching.jsonnet  sp.jsonnet  wcls-img-clus.jsonnet  wcls-sim-drift-depoflux-nf-sp.jsonnet  wcls-sim-drift-simchannel-nf-sp.jsonnet  wct-sim-fans-sbnd.jsonnet
cfg/test/: test-mergepatch.jsonnet  test-omni.jsonnet  test-unique-list.jsonnet  test_wrap.jsonnet  test_wrap_graph.jsonnet
clus/: CMakeLists.txt  wscript_build
cmake/: BuildConfig.h.in  README.md  WCTBuildConfig.cmake  WCTDependencies.cmake  WCTExport.cmake  WCTPackage.cmake  WCTRootDict.cmake  WCTTestData.cmake  WCTTests.cmake  WCTVersion.cmake  WireCellConfig.cmake.in  WireCellToolkitConfig.cmake.in  download-test-data.cmake  pack-test-data.cmake  (+1 more)
pyutil/: CMakeLists.txt  wscript_build
pyutil/inc/WCPPyUtil/: SCN_Vertex.h
pyutil/python/: SCN_Vertex.py
pyutil/src/: SCN_Vertex.cxx
spng/: .gitignore  (+4 more)
util/: CMakeLists.txt
util/docs/: configuration.org  contents.org  developers.org  logging.org  namedfactory-classes.plantuml  nary-tree-node.org  using-clangd.org
util/inc/WireCellUtil/: Array.h  Bee.h  BoundingBox.h  ConfigManager.h  Configuration.h  CoordRegion.h  D3Vector.h  Eigen.h  ElasticNetModel.h  Flagged.h  Fmt.h  Graph.h  GraphTools.h  HanaJsonCPP.h  Interpolate.h  KSTest.h  LMN.h  LassoModel.h  LinearModel.h  Logging.h  NFKDVec.h  NamedFactory.h  NaryTesting.h  NaryTree.h  NaryTreeFacade.h  NaryTreeNotified.h  Persist.h  Pimpos.h  Point.h  PointCloudArray.h  PointCloudDataset.h  PointCloudTransform.h  PointTree.h  RayGrid.h  Ress.h  Semaphore.h  Spdlog.h  String.h  Subgraph.h  ThreadSafeCache.h  (+2 more)
util/inc/WireCellUtil/custard/: custard_boost.hpp  custard_file.hpp  custard_stream.hpp
util/src/: Bee.cxx  BoundingBox.cxx  ConfigManager.cxx  Configuration.cxx  ElasticNetModel.cxx  Fmt.cxx  KSTest.cxx  LMN.cxx  LassoModel.cxx  Logging.cxx  NaryTesting.cxx  Persist.cxx  Pimpos.cxx  PluginManager.cxx  Point.cxx  PointCloudArray.cxx  PointCloudDataset.cxx  PointTesting.cxx  PointTree.cxx  RayHelpers.cxx  RaySvg.cxx  RayTiling.cxx  Response.cxx  Ress.cxx  String.cxx  Testing.cxx  WireSchema.cxx
util/test/: check-regex.cxx  check_subgraph.cxx  check_subgraph_graph_property2.cxx  check_subgraph_local_and_global.cxx  doctest-configuration.cxx  doctest_boost_filesystem.cxx  doctest_boost_graph_types.cxx  doctest_boost_histogram.cxx  doctest_coordregion.cxx  doctest_eigen_pca_simple.cxx  doctest_fmt.cxx  doctest_hanajsoncpp.cxx  doctest_inheritance.cxx  doctest_jsoncpp.cxx  doctest_kstest.cxx  doctest_logging.cxx  doctest_nary_tree.cxx  doctest_nary_tree_facade.cxx  doctest_nfkdvec.cxx  doctest_persist.cxx  doctest_point.cxx  doctest_pointcloud.cxx  doctest_pointcloud_hough.cxx  doctest_pointtree.cxx  doctest_response.cxx  doctest_string.cxx  doctest_subgraph.cxx  doctest_threadsafecache.cxx  doctest_threadsafemap.cxx  test_eigen.cxx  test_eigen_symbols.cxx  test_icl.cxx  test_interpolate.cxx  test_jsonnet.cxx  test_median.cxx  test_rayclustering.cxx  test_type.cxx  test_util_stream.cxx  test_waveform.cxx  test_wireschema2.cxx
(+1048 files in other folders)
